fix spacing bug

--- a/src/sass/register.sass
+++ b/src/sass/register.sass
@@ -39,7 +39,7 @@ body
 
 
     label.static
-      min-width: 160px
+      min-width: 164px
       display: inline-block
       text-align: right
       font-size: 1rem !important
